--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,17 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    <%= yield %>
+    
+  <% flash.each do |message_type, message| %>
+      <div class="alert alert-
+  <%= message_type %>
+  ">
+  <%= message %>
+      </div>
+    
+  <% end %>
+    
+  <%= yield %>
   </div>
 
 </body>
