--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,25 +2,17 @@
 <html>
 <head>
   <title>Microposts</title>
-  <%= stylesheet_link_tag 'application', media: 'all' %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
-    
-  <% flash.each do |message_type, message| %>
-      <div class="alert alert-
-  <%= message_type %>
-  ">
-  <%= message %>
-      </div>
-    
-  <% end %>
-    
-  <%= yield %>
+    <% flash.each do |message_type, message| %> <!-- ここから -->
+      <div class="alert alert-<%= message_type %>"><%= message %></div>
+    <% end %> <!-- ここまで追加 -->
+    <%= yield %>
   </div>
-
 </body>
 </html>
