--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,15 +1,18 @@
-<h1>Sign up</h1>
+<h1>EditProfile</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %> <!-- ここを追加 -->
-
+      <%= render 'shared/error_messages', object: f.object %>
+      
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
 
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
+      
+      <%= f.label :location %>
+      <%= f.text_field :location, class: 'form-control' %>
 
       <%= f.label :password %>
       <%= f.password_field :password, class: 'form-control' %>
@@ -17,7 +20,7 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
+      <%= f.submit "Update", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
